--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    
+    <header></header>
+    <script src="/app.js"></script>
 </body>
 </html>
