--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">Discover</a></li>
+                <li><a href="#">Community</a></li>
+                <li><a href="#">Special Deals</a></li>
+                <li><a href="#">Abot Us</a></li>
+                <li><a href="#">register</a></li>
+            </ul>
+        </nav>
+    </header>
     <script src="/app.js"></script>
 </body>
 </html>
