--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <nav>
+            <h4>Agency Website</h4>
             <ul>
                 <li><a href="#">Discover</a></li>
                 <li><a href="#">Community</a></li>
