--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
                 <li><a href="#">Discover</a></li>
                 <li><a href="#">Community</a></li>
                 <li><a href="#">Special Deals</a></li>
-                <li><a href="#">Abot Us</a></li>
-                <li><a href="#">register</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Register</a></li>
             </ul>
         </nav>
     </header>
