--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tour Travel Agency Website</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -17,6 +18,7 @@
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Register</a></li>
             </ul>
+            <i class="bi bi-three-dots"></i>
         </nav>
     </header>
     <script src="/app.js"></script>
