--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             </ul>
             <i class="bi bi-three-dots"></i>
         </nav>
+        <div class="content"></div>
     </header>
     <script src="/app.js"></script>
 </body>
