--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
             </ul>
             <i class="bi bi-three-dots"></i>
         </nav>
-        <div class="content"></div>
+        <div class="content">
+            <div class="cont">
+                <h1>the right destination for you and your family</h1>
+                <p>creative taglines have the capability of capturing attention of potential</p>
+            </div>
+        </div>
     </header>
     <script src="/app.js"></script>
 </body>
