--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
             <i class="bi bi-three-dots"></i>
         </nav>
         <div class="content">
-            <div class="cont">
+            <div class="cont_bx">
                 <h1>the right destination for you and your family</h1>
                 <p>creative taglines have the capability of capturing attention of potential</p>
+                <button>start your search</button>
             </div>
         </div>
     </header>
