--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
                 <button>start your search</button>
             </div>
         </div>
+        <div class="trip_bx">
+            <div class="search_bx">
+                
+            </div>
+        </div>
     </header>
     <script src="/app.js"></script>
 </body>
