--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
             </div>
             <div class="trip_bx">
                 <div class="search_bx">
-                    
+                    <div class="card"></div>
+                    <div class="card"></div>
+                    <div class="card"></div>
                 </div>
             </div>
         </div>
-        
+
     </header>
     <script src="/app.js"></script>
 </body>
