--- a/index.html
+++ b/index.html
@@ -28,9 +28,18 @@
             </div>
             <div class="trip_bx">
                 <div class="search_bx">
-                    <div class="card"></div>
-                    <div class="card"></div>
-                    <div class="card"></div>
+                    <div class="card">
+                        <h4>Location <i class="bi bi-caret-down-fill"></i></h4>
+                        <input type="text" placeholder="Enter You destination">
+                    </div>
+                    <div class="card">
+                        <h4>Date <i class="bi-caret-down-fill"></i></h4>
+                        <input type="date">
+                    </div>
+                    <div class="card">
+                        <h4>people <i class="bi-caret-down-fill"></i></h4>
+                        <input type="number" placeholder="How many people?">
+                    </div>
                 </div>
             </div>
         </div>
