--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                         <h4>people <i class="bi-caret-down-fill"></i></h4>
                         <input type="number" placeholder="How many people?">
                     </div>
+                    <input type="button" value="Explore Now">
                 </div>
             </div>
         </div>
