--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                     <input type="button" value="Explore Now">
                 </div>
             </div>
+            <div class="travel_bx"></div>
         </div>
 
     </header>
