--- a/index.html
+++ b/index.html
@@ -33,17 +33,20 @@
                         <input type="text" placeholder="Enter You destination">
                     </div>
                     <div class="card">
-                        <h4>Date <i class="bi-caret-down-fill"></i></h4>
+                        <h4>Date <i class="bi bi-caret-down-fill"></i></h4>
                         <input type="date">
                     </div>
                     <div class="card">
-                        <h4>people <i class="bi-caret-down-fill"></i></h4>
+                        <h4>people <i class="bi bi-caret-down-fill"></i></h4>
                         <input type="number" placeholder="How many people?">
                     </div>
                     <input type="button" value="Explore Now">
                 </div>
+                <div class="travel_bx">
+                    <h4>Countries to travel</h4>
+                    <div class="cards"></div>
+                </div>
             </div>
-            <div class="travel_bx"></div>
         </div>
 
     </header>
