--- a/index.html
+++ b/index.html
@@ -44,7 +44,12 @@
                 </div>
                 <div class="travel_bx">
                     <h4>Countries to travel</h4>
-                    <div class="cards"></div>
+                    <div class="cards">
+                        <div class="card"></div>
+                        <div class="card"></div>
+                        <div class="card"></div>
+                        <div class="card"></div>
+                    </div>
                 </div>
             </div>
         </div>
