--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
                 <div class="travel_bx">
                     <h4>Countries to travel</h4>
                     <div class="cards">
-                        <div class="card"></div>
+                        <div class="card">
+                            <h3>INDIA <img src="/img/icon/india.png" alt=""></h3>
+                        </div>
                         <div class="card"></div>
                         <div class="card"></div>
                         <div class="card"></div>
