--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
                     <div class="cards">
                         <div class="card">
                             <h3>INDIA <img src="/img/icon/india.png" alt=""></h3>
+                            <img src="/img/img/Mumbai-India-at-night.jpg" alt="">
+                            <div class="btn_city">
+                                <a href="">Read Now</a>
+                                <h5>Mumbai Central <br> <span>$460</span></h5>
+                            </div>
                         </div>
                         <div class="card"></div>
                         <div class="card"></div>
