--- a/index.html
+++ b/index.html
@@ -53,9 +53,24 @@
                                 <h5>Mumbai Central <br> <span>$460</span></h5>
                             </div>
                         </div>
-                        <div class="card"></div>
-                        <div class="card"></div>
-                        <div class="card"></div>
+
+                        <div class="card">
+                            <h3>UNITED STATET <img src="/img/icon/united-states.png" alt=""></h3>
+                            <img src="/img/img/newyork.webp" alt="">
+                            <div class="btn_city">
+                                <a href="">Read Now</a>
+                                <h5>NewYork <br> <span>$870</span></h5>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <h3>RUSSIA <img src="/img/icon/russia.png" alt=""></h3>
+                            <img src="/img/img/sanpitersburg.jpg" alt="">
+                            <div class="btn_city">
+                                <a href="">Read Now</a>
+                                <h5>sanpitersburg <br> <span>$460</span></h5>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
