--- a/index.html
+++ b/index.html
@@ -68,7 +68,16 @@
                             <img src="/img/img/sanpitersburg.jpg" alt="">
                             <div class="btn_city">
                                 <a href="">Read Now</a>
-                                <h5>sanpitersburg <br> <span>$460</span></h5>
+                                <h5>sanpitersburg <br> <span>$660</span></h5>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <h3>SPAIN <img src="/img/icon/spain.png" alt=""></h3>
+                            <img src="/img/img/barcelona.jpg" alt="">
+                            <div class="btn_city">
+                                <a href="">Read Now</a>
+                                <h5>barcelona <br> <span>730</span></h5>
                             </div>
                         </div>
                     </div>
