--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
         </div>
 
     </header>
+    <div class="offers">
+        <h1>Best tour Package offers for you</h1>
+        <p>choose your next destination</p>
+    </div>
     <script src="/app.js"></script>
 </body>
 </html>
