--- a/index.html
+++ b/index.html
@@ -89,6 +89,12 @@
     <div class="offers">
         <h1>Best tour Package offers for you</h1>
         <p>choose your next destination</p>
+        <div class="cards">
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+        </div>
     </div>
     <script src="/app.js"></script>
 </body>
