--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
         <h1>Best tour Package offers for you</h1>
         <p>choose your next destination</p>
         <div class="cards">
-            <div class="card"></div>
+            <div class="card">
+                <h3>Lotus-Dehil</h3>
+            </div>
             <div class="card"></div>
             <div class="card"></div>
             <div class="card"></div>
