--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
         <div class="cards">
             <div class="card">
                 <h3>Lotus-Dehil</h3>
+                <div class="img_text">
+                    <img src="/img/img/lotus_temple.jpg" alt="">
+                </div>
             </div>
             <div class="card"></div>
             <div class="card"></div>
