--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
                 <h3>Lotus-Dehil</h3>
                 <div class="img_text">
                     <img src="/img/img/lotus_temple.jpg" alt="">
+                    <h4>Inclded: Air ticket, Hotel, Breakfast, Tours, Airport, Transfer</h4>
                 </div>
             </div>
             <div class="card"></div>
