--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
                     <img src="/img/img/lotus_temple.jpg" alt="">
                     <h4>Inclded: Air ticket, Hotel, Breakfast, Tours, Airport, Transfer</h4>
                 </div>
+                <div class="cont_bx">
+                    
+                </div>
             </div>
             <div class="card"></div>
             <div class="card"></div>
