--- a/index.html
+++ b/index.html
@@ -97,7 +97,16 @@
                     <h4>Inclded: Air ticket, Hotel, Breakfast, Tours, Airport, Transfer</h4>
                 </div>
                 <div class="cont_bx">
-                    
+                    <div class="price">
+                        <div class="heart-chat">
+                            <i class="bi bi-heart-fill"><span>86415</span></i>
+                            <i class="bi bi-chat-fill"><span>4586</span></i>
+                        </div>
+                        <div class="info_price">
+                            <a href="">More info</a>
+                            <h4>$2648</h4>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="card"></div>
