--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
                             <h4>$2648</h4>
                         </div>
                     </div>
+                    <div class="dayes">5 Days <br> India</div>
                 </div>
             </div>
             <div class="card"></div>
