--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 </div>
                 <div class="cont_bx">
                     <div class="price">
-                        <div class="heart-chat">
+                        <div class="heart_chat">
                             <i class="bi bi-heart-fill"><span>86415</span></i>
                             <i class="bi bi-chat-fill"><span>4586</span></i>
                         </div>
