--- a/index.html
+++ b/index.html
@@ -152,6 +152,27 @@
                     <div class="dayes">7 Days <br> Egypto</div>
                 </div>
             </div>
+
+            <div class="card">
+                <h3>Mountain-Vietnam</h3>
+                <div class="img_text">
+                    <img src="/img/img/mountain.jpg" alt="">
+                    <h4>Inclded: Air ticket, Hotel, Breakfast, Tours, Airport, Transfer</h4>
+                </div>
+                <div class="cont_bx">
+                    <div class="price">
+                        <div class="heart_chat">
+                            <i class="bi bi-heart-fill"><span>86415</span></i>
+                            <i class="bi bi-chat-fill"><span>4586</span></i>
+                        </div>
+                        <div class="info_price">
+                            <a href="">More info</a>
+                            <h4>$2648</h4>
+                        </div>
+                    </div>
+                    <div class="dayes">7 Days <br> Vietnam</div>
+                </div>
+            </div>
         </div>
     </div>
     <script src="/app.js"></script>
