--- a/index.html
+++ b/index.html
@@ -175,6 +175,9 @@
             </div>
         </div>
     </div>
+    <div class="destination">
+        
+    </div>
     <script src="/app.js"></script>
 </body>
 </html>
