--- a/index.html
+++ b/index.html
@@ -176,7 +176,18 @@
         </div>
     </div>
     <div class="destination">
-        
+        <div class="des_bx">
+            <h4>Our Destination</h4>
+            <p>choose your next Destination</p>
+            <li>India</li>
+            <li>Dubai</li>
+            <li>USA</li>
+            <li>Vietnam</li>
+            <li>Russia</li>
+            <li>Brazil</li>
+
+        </div>
+        <div class="img_bx"></div>
     </div>
     <script src="/app.js"></script>
 </body>
