--- a/index.html
+++ b/index.html
@@ -185,7 +185,8 @@
             <li>Vietnam</li>
             <li>Russia</li>
             <li>Brazil</li>
-
+            <h6>Inlcuded: Air ticket, Hotel, Breakfast, Tours, Airport transfer</h6>
+            <button>MORE INFO</button>
         </div>
         <div class="img_bx"></div>
     </div>
