--- a/index.html
+++ b/index.html
@@ -188,7 +188,9 @@
             <h6>Inlcuded: Air ticket, Hotel, Breakfast, Tours, Airport transfer</h6>
             <button>MORE INFO</button>
         </div>
-        <div class="img_bx"></div>
+        <div class="img_bx">
+            <img src="/img/img/Main_plan.png" alt="">
+        </div>
     </div>
     <script src="/app.js"></script>
 </body>
