--- a/index.html
+++ b/index.html
@@ -190,6 +190,16 @@
         </div>
         <div class="img_bx">
             <img src="/img/img/Main_plan.png" alt="">
+            <div class="msg">
+                <img src="/img/icon/round_india_flag.png" alt="">
+                <div class="cont">
+                    <h4>India</h4>
+                    <div class="icon">
+                        <i class="bi bi-heart-fill"><span>86415</span></i>
+                        <i class="bi bi-chat-fill"><span>4586</span></i>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <script src="/app.js"></script>
