--- a/index.html
+++ b/index.html
@@ -200,6 +200,17 @@
                     </div>
                 </div>
             </div>
+
+            <div class="msg">
+                <img src="/img/icon/united-states.png" alt="">
+                <div class="cont">
+                    <h4>United State</h4>
+                    <div class="icon">
+                        <i class="bi bi-heart-fill"><span>86415</span></i>
+                        <i class="bi bi-chat-fill"><span>4586</span></i>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <script src="/app.js"></script>
