--- a/index.html
+++ b/index.html
@@ -213,6 +213,20 @@
             </div>
         </div>
     </div>
+
+    <footer>
+        <h2>Subscribe & <br> get Special discount</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae, esse tempore. Aliquam illo placeat ipsa.</p>
+        <div class="input">
+            <input type="text" placeholder="Enter your Email Address">
+            <button>Subscribe</button>
+        </div>
+        <ul>
+            <li>7823 <br> <h6>Years Serving the Travel Industry</h6></li>
+            <li>7823 <br> <h6>Global <br> Patnership</h6></li>
+            <li>7823 <br> <h6>Industry Awards Since 2023</h6></li>
+        </ul>
+    </footer>
     <script src="/app.js"></script>
 </body>
 </html>
