--- a/index.html
+++ b/index.html
@@ -223,8 +223,9 @@
         </div>
         <ul>
             <li>7823 <br> <h6>Years Serving the Travel Industry</h6></li>
-            <li>7823 <br> <h6>Global <br> Patnership</h6></li>
-            <li>7823 <br> <h6>Industry Awards Since 2023</h6></li>
+            <li>6374 <br> <h6>Global <br> Patnership</h6></li>
+            <li>1496 <br> <h6>Industry Awards Since 2023</h6></li>
+            <li>5658 <br> <h6>Subscribe</h6></li>
         </ul>
     </footer>
     <script src="/app.js"></script>
