--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
     <footer>
         <h2>Subscribe & <br> get Special discount</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae, esse tempore. Aliquam illo placeat ipsa.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae.</p>
         <div class="input">
             <input type="text" placeholder="Enter your Email Address">
             <button>Subscribe</button>
