--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Tour Travel Agency Website</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="/responsive.css">
+    <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
     <header>
