--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <h4>Agency Website</h4>
-            <ul>
+            <ul id="menu_bx">
                 <li><a href="#">Discover</a></li>
                 <li><a href="#">Community</a></li>
                 <li><a href="#">Special Deals</a></li>
